--- a/examples/gallery/package.json
+++ b/examples/gallery/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^4.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^2.0.0",
     "source-map-loader": "^0.2.4",
