--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "reactive-blocs",
-    "version": "0.0.71",
+    "version": "0.1.0",
     "description": "Reactive Blocs",
     "main": "index.js",
     "scripts": {
@@ -22,13 +22,13 @@
     },
     "homepage": "https://github.com/nairinarinyan/reactive-blocs#readme",
     "peerDependencies": {
-        "rxjs": "^6.5.4",
-        "react": "^16.8.6"
+        "react": "^17.0.1",
+        "rxjs": "^6.6.7"
     },
     "devDependencies": {
         "@types/react": "^16.8.14",
-        "react": "^16.8.6",
-        "rxjs": "^6.5.4",
+        "react": "17.0.1",
+        "rxjs": "6.6.7",
         "typescript": "^3.4.2"
     }
 }
