--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "reactive-blocs",
-    "version": "0.1.7",
+    "version": "0.1.8",
     "description": "Reactive Blocs",
     "main": "index.js",
     "scripts": {
@@ -22,14 +22,13 @@
     },
     "homepage": "https://github.com/nairinarinyan/reactive-blocs#readme",
     "peerDependencies": {
-        "react": "*"
-    },
-    "dependencies": {
-        "rxjs": "7.3.0"
+        "react": "^16.8 || ^17.0 || ^18.0",
+        "rxjs": "^7.0"
     },
     "devDependencies": {
-        "@types/react": "^17.0.15",
-        "react": "^17.0.2",
-        "typescript": "^4.3.5"
+        "@types/react": "^17.0",
+        "react": "^17.0",
+        "typescript": "^4.3.5",
+        "rxjs": "^7.0"
     }
 }
